# walkthru-overture-index

./: .env.example  .gitignore  CLAUDE.md  README.md  SC_README.md  geocoder.py  main.py  pyproject.toml
.github/workflows/: build-index.yml  detect-release.yml
sql/: addresses.sql  addresses_v3.sql  addresses_v4.sql  base.sql  buildings.sql  places.sql  transportation.sql
sql/v1/: buildings.sql
state/: last-release.txt
